<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_get_old_media"
        android:title="@string/action_get_old_media"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restart_app"
        android:title="@string/action_restart_app"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <!--<item
        android:id="@+id/action_delete_all_media"
        android:title="@string/action_delete_all_media"
        android:icon="@drawable/abc_ab_bottom_transparent_light_holo"
        android:orderInCategory="200"
        app:showAsAction="never" />-->

</menu>
