<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:id="@+id/dialog_register_main_container">

    <TextView
        android:textAllCaps="true"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        style="@style/dialog_register_edittext"
        android:textSize="22sp"
        android:hint="title"
        android:visibility="visible"
        android:id="@+id/dialog_register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dialog_register_email_text_view"
        android:background="@android:color/transparent"
        style="@style/dialog_register_edittext"
        android:layout_marginBottom="4dp"
        android:hint="@string/email"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/dialog_register_email"
        android:inputType="textEmailAddress"
        android:background="@android:color/transparent"
        style="@style/dialog_register_edittext"
        android:layout_marginBottom="4dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/dialog_register_password"
        android:inputType="textPassword"
        android:background="@android:color/transparent"
        style="@style/dialog_register_edittext"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/dialog_register_surname"
        android:inputType="text"
        android:background="@android:color/transparent"
        style="@style/dialog_register_edittext"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/surname" />

    <EditText
        android:id="@+id/dialog_register_name"
        android:hint="@string/name"
        android:background="@android:color/transparent"
        style="@style/dialog_register_edittext" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        style="?buttonBarStyle"
        android:weightSum="2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?buttonBarButtonStyle"
            android:background="@android:color/transparent"
            android:id="@+id/dialog_register_button_cancel"
            android:text="@android:string/cancel"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?buttonBarButtonStyle"
            android:background="@android:color/transparent"
            android:id="@+id/dialog_register_button_ok"
            android:text="@android:string/ok"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>